--- a/application/app/views/patients/anc_number.rhtml
+++ b/application/app/views/patients/anc_number.rhtml
@@ -7,17 +7,21 @@
 
 </script>
 
-
+<% if params[:old_anc_number] %>
+  <% action = "Edit" %>
+<% else %>
+    <% action = "New" %>
+<% end %>
 <form id='anc_number' action="" method='post'>
     <% options = {
          :id          => "anc_number",
-         :helpText    => "Enter ANC Connect ID",
+         :helpText    => "#{action} ANC Connect ID",
          :field_type => 'number',
          :allowFreeText => true
        }
     %>
 
-    <%= text_field_tag "anc_number", nil, options %>
+    <%= text_field_tag "anc_number", params[:old_anc_number], options %>
 
     <%= submit_tag "Finish" %>
 </form>
