--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -15,12 +15,35 @@
   }
   window.setTimeout("addElementToParent();", 50);
 
-  function gotoANCnumber(){
-    window.location = "/patients/anc_number?patient_id=<%= @patient.id %>"
+  function gotoANCnumber(number){
+    if (number){
+      window.location = "/patients/anc_number?patient_id=<%= @patient.id %>&old_anc_number=" + number
+    }
+    else{
+      window.location = "/patients/anc_number?patient_id=<%= @patient.id %>"
+    }
   }
 
 </script>
 <style>
+  .anc_connect_button{
+    min-width:30%;
+    opacity: 0.9;
+    border-radius: 7px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    background: #3498db;;
+    font-size: 110%;
+    padding: 5px 20px 5px 20px;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    font-family: Georgia;
+    cursor: pointer;
+    color:white;
+  }
+  
   div{
     -moz-user-select:none;
   }
@@ -68,7 +91,14 @@
  
   <div id="patient_card">
     <div id="ivr_access_code" value="<%= @patient.ivr_access_code rescue '' %>">IVR Access Code</div>
-    
+
+    <% unless @anc_connect_id.blank? %>
+
+      <div id="anc_connect_number" value="<span onclick= 'gotoANCnumber(<%= @anc_connect_id%>);' class='anc_connect_button'><%=@anc_connect_id%></span>">ANC Connect ID</div>
+    <% else %>
+       <div id="anc_connect_number" value="<span onclick= 'gotoANCnumber()' class='anc_connect_button'>New ANC ID</span>">ANC Connect ID</div>
+    <% end %>
+
     <% if @status.upcase == 'DELIVERED' %>
         <div id="date_delivered" value="<%=@date%>">Date Delivered</div>
     <% end %>
@@ -120,8 +150,5 @@
         <option value='/clinic/followup?person=<%=@patient.id%>&source=PD'>Follow up</option>
     <% end %>
   </select>
-</div>
-<div id="anc_connect_id">
-  <span onclick="gotoANCnumber();">ANC ID</span>
 </div>
 
