handle empty encounter

--- a/application/app/views/patients/visit_summary.rhtml
+++ b/application/app/views/patients/visit_summary.rhtml
@@ -28,7 +28,7 @@
                 <% header = false%>
                 <tr>
                   <td>
-                    <%= encounter.to_s %>
+                    <%= encounter.to_s rescue nil %>
                   </td>
 
                   <td  style="width: 50px;">
