--- a/application/app/views/patients/anc_info.rhtml
+++ b/application/app/views/patients/anc_info.rhtml
@@ -1,14 +1,10 @@
 
 <script>
   var tt_cancel_destination = "/patients/show/<%= params[:patient_id] %>"
-
-  function getSelection(){
-    selected_elements = $('touchscreenInput' + tstCurrentPage).value
-  }
 </script>
 <form id='anc_info_form' action="anc_info" method='post'>
 
-  <%= select_tag :anc_update_encs, options_for_select(@options),
+  <%= select_tag "anc_update_encs[]", options_for_select(@options),
     {
       :id => "anc_info",
       :helpText => "Update?",
