Adding Referral to Emergency Transport as an option under outomes

--- a/application/app/views/patients/anc_number.rhtml
+++ b/application/app/views/patients/anc_number.rhtml
@@ -41,6 +41,8 @@
          :id          => "anc_connect_number",
          :helpText    => "#{action} ANC Connect ID",
          :field_type => 'number',
+         :validationRule => "^\\d{4}$",
+          :validationMessage => "You must enter a valid number(four digits)",
          :allowFreeText => true,
          :tt_onLoad => "setAttributes();"
        }
