--- a/application/app/views/people/find_by_anc_number.rhtml
+++ b/application/app/views/people/find_by_anc_number.rhtml
@@ -18,5 +18,5 @@
         :field_type => 'number' ,
         :helpText => "Enter patient\'s ANC connect ID",
         :validationRule => "^\\d{4}$",
-        :validationMessage => "You must enter a valid number" %>
+        :validationMessage => "You must enter a valid number(four digits)" %>
 </form> 
