--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -79,7 +79,7 @@
 
   <div id="project_name"><%=version_without_date -%></div>
 
-  <div id="patient_name"><%= @patient.person.name -%></div>
+  <div id="patient_name"><%= @patient.person.name_plus_nickname-%></div>
   <div id="patient_gender"><%=@patient.person.formatted_gender -%></div>
   <%  if @patient.person.age <= 2 %>
       <div id="patient_age"><%= @patient.person.age_in_years_months rescue '' -%></div>
