--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -139,9 +139,12 @@
       <option value='/clinic/schedules?patient_id=<%=@patient.id%>&source_url=patient_dashboard'>Clinic Schedules</option>
       <option value='/encounters/new/tips_and_reminders?patient_id=<%=@patient.id%>'>Tips and Reminders</option>
       <option value='/encounters/recent_tip_and_reminder_program?patient_id=<%=@patient.id%>'>Edit Reminders</option>
-      <option value='/patients/demographics?patient_id=<%=@patient.id%>'>Edit Demograghics</option>
-      <option value='/patients/anc_info?patient_id=<%=@patient.id%>'>ANC info</option>
-      <option value='/encounters/new/pregnancy_status?patient_id=<%=@patient.id%>&anc_connect_workflow_start=true'>ANC connect</option>
+      <option value='/patients/demographics?patient_id=<%=@patient.id%>'>Edit Demograghics</option>    
+      <% if @patient_anc_program.blank? %>
+          <option value='/encounters/new/pregnancy_status?patient_id=<%=@patient.id%>&anc_connect_workflow_start=true'>ANC connect</option>
+      <% else %>
+          <option value='/patients/anc_info?patient_id=<%=@patient.id%>'>ANC info</option>
+      <% end %>
       <option value='/clinic/call?task=next'>Next Client</option>
     <% else %>
       <option value='/encounters/recent_tip_and_reminder_program?patient_id=<%=@patient.id%>'>Edit Reminders</option>
