--- a/application/app/views/encounters/birth_plan.rhtml
+++ b/application/app/views/encounters/birth_plan.rhtml
@@ -17,19 +17,12 @@
 		{:id => "birth_plan",
 		 :helptext => "Birth plan?" } %>
   
-  <% options = {
-    :id           => "delivery_location",
-    :helptext     => "Planned Delivery Location?",
-    :tt_onUnLoad  => "$('delivery_location_value_coded_or_text').value = $('delivery_location').value",
-    :condition    => "$('birth_plan').value == 'Yes'"
-	} %>
-
-  <%= select_tag("delivery_location", options_for_select(@health_facilities, @encounter_answers[:health_facility_name]),options)%>
-  <%= hidden_field_tag("observations[][concept_name]",        "DELIVERY LOCATION", options) %>
-  <%= hidden_field_tag("observations[][value_coded_or_text]", nil, {:id => 'delivery_location_value_coded_or_text'}) %>
-  <%= hidden_field_tag("observations[][patient_id]",          @patient.id) %>
-  <%= hidden_field_tag("observations[][obs_datetime]",        DateTime.now()) %>
-
+  <%= touch_select_tag "DELIVERY LOCATION", @patient, options_for_select(@health_facilities, @encounter_answers[:health_facility_name]),
+		{:id => "delivery_location",
+		 :multiple => 'false',
+		 :helptext => "Planned Delivery Location?",
+		 :condition    => "$('birth_plan').value == 'Yes'" } %>
+  
   
   <%= touch_text_field_tag "GO TO HOSPITAL DATE", @patient,'' ,
         { :id => "go_to_hospital_date",
