Removed search by ANC connect ID

--- a/application/app/views/clinic/home.html.erb
+++ b/application/app/views/clinic/home.html.erb
@@ -27,7 +27,7 @@
       <option value="/clinic/emergencycall" ttSize="170px">Emergency Call</option>
     <%end%>
     <option value="/people/find_by_phone" ttSize="170px">Find by phone</option>
-    <option value="/people/find_by_anc_number" ttSize="170px">Find by ANC ID</option>
+    <!--<option value="/people/find_by_anc_number" ttSize="170px">Find by ANC ID</option>-->
     
     <% if ! session[:house_keeping_mode] == false  %>
         <option value="/clinic/new_call?task=followup" ttSize="130px">Follow up</option>
