Setting minimum width for the ANC ID button on the patient dashboard

--- a/application/app/views/patients/anc_number.rhtml
+++ b/application/app/views/patients/anc_number.rhtml
@@ -16,7 +16,7 @@
           gotoNextPage();
         }
         else{
-          showMessage("The ANC connect ID you have entered is already occupied by other client.")
+          showMessage("The ANC connect ID you have entered is already occupied by another client.")
         }
       }
     });
