--- a/application/app/views/encounters/birth_plan.rhtml
+++ b/application/app/views/encounters/birth_plan.rhtml
@@ -20,14 +20,14 @@
   <%= touch_select_tag "DELIVERY LOCATION", @patient, options_for_select(@health_facilities, @encounter_answers[:health_facility_name]),
 		{:id => "delivery_location",
 		 :helptext => "Planned Delivery Location?",
-		 :condition    => "$('birth_plan').value == 'Yes'" } %>
+		 :condition => "$('birth_plan').value == 'Yes'" } %>
   
   <%= touch_text_field_tag "GO TO HOSPITAL DATE", @patient,'' ,
         { :id => "go_to_hospital_date",
           :field_type => "date",
           :helptext => "Go to hospital date?",
-          :condition => "$('birth_plan').value == 'Yes'"} %>
-   
+          :condition => "$('birth_plan').value == 'Yes'",
+          :absoluteMax => "#{session_date.strftime('%Y-%m-%d')}"} %>
              	 	  
   <%unless @encounter_id.nil?%>
     <%= hidden_field_tag("encounter_id",  @encounter_id) %>
