added date validations

--- a/application/app/views/encounters/anc_visit.rhtml
+++ b/application/app/views/encounters/anc_visit.rhtml
@@ -33,13 +33,16 @@
         { :id => "last_anc_visit_date",
           :field_type => "date",
           :helptext => "#{@patient.person.names.first.given_name} " + "(#{@patient.person.names.first.family_name_prefix}) " + "#{@patient.person.names.first.family_name} " +  "Last ANC Visit Date?",
-          :condition => "$('anc_visit').value == 'Yes'"} %>
+          :condition => "$('anc_visit').value == 'Yes'",
+          :absoluteMax => "#{session_date.strftime('%Y-%m-%d')}"} %>
   
   <%= touch_text_field_tag "NEXT ANC VISIT DATE", @patient,next_anc_date ,
         { :id => "next_anc_visit_date",
           :field_type => "date",
           :helptext => "#{@patient.person.names.first.given_name} " + "(#{@patient.person.names.first.family_name_prefix}) " + "#{@patient.person.names.first.family_name} " + "Next ANC Visit Date?",
-          :condition => "$('anc_visit').value == 'Yes'"} %>
+          :condition => "$('anc_visit').value == 'Yes'",
+          :absoluteMin => "#{session_date.advance(:days => 1).strftime('%Y-%m-%d')}",
+          :absoluteMax => "#{session_date.advance(:days => 14 ).strftime('%Y-%m-%d')}"} %>
              
    <%= touch_select_tag "REASON FOR NOT ATTENDING ANC", @patient, options_for_select(@select_options['reason_for_not_attending_anc']),
 		{	:id => "reason_for_not_attending_anc",
