--- a/application/app/views/report/anc_connect_clients.rhtml
+++ b/application/app/views/report/anc_connect_clients.rhtml
@@ -30,10 +30,19 @@
         </tr>
         <%@report.reverse.map do |dates, values|%>
           <tr>
-            <td width="25%" colspan = 2 class="cellleft cellbottom main-table-cell" style="background-color:ddd; text-align:center;font-weight: bold; font-size: large; font-style: italic;">
+            <td width="25%" colspan = 5 class="cellleft cellbottom main-table-cell" style="background-color:ddd; text-align:center;font-weight: bold; font-size: large; font-style: italic;">
               <%= @grouping.humanize + " beginning "+ dates[:start_date] + " ending " + dates[:end_date]%>
             </td>
           </tr>
+          <% values.each do |v| %>
+          <tr>
+            <td><%= v["given_name"] %></td>
+            <td><%= v["family_name"] %></td>
+            <td><%= v["birthdate"] %></td>
+            <td><%= v["cell_phone_number"] %></td>
+            <td><%= v["home_village"] %></td>
+          </tr>
+          <% end %>
         <% end %>
       </table>
 
